--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "cg-mars-workout",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.ts"
+    ]
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -19,11 +25,26 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.1",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.6",
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-jest": "^26.6.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "typescript": "4.7.4"
   }
 }
